[gd_scene load_steps=12 format=3 uid="uid://c7rfvjpqsmeb8"]

[ext_resource type="Script" path="res://src/Characters/Max/max.gd" id="1_enr7n"]
[ext_resource type="Texture2D" uid="uid://ga1ex7busmof" path="res://src/Characters/Max/max3.png" id="1_nx7hy"]
[ext_resource type="Texture2D" uid="uid://brcocx6q6doft" path="res://src/Characters/Max/max_torso.png" id="2_u1ccp"]
[ext_resource type="Texture2D" uid="uid://bmy80gftuxvjt" path="res://src/Characters/Max/max_leg.png" id="3_68rjg"]
[ext_resource type="Texture2D" uid="uid://bq0u1ww7kkx16" path="res://src/Characters/Max/max_hammer.png" id="4_7digu"]
[ext_resource type="Script" path="res://src/StateMachines/StateMachine.gd" id="6_qciws"]
[ext_resource type="Script" path="res://src/Characters/Max/States/move_idle.gd" id="7_n808q"]
[ext_resource type="Script" path="res://src/Characters/Max/States/move_cancel.gd" id="8_1ekhc"]
[ext_resource type="Script" path="res://src/Characters/Max/States/move_commit.gd" id="9_ser34"]
[ext_resource type="Script" path="res://src/Characters/Max/States/move_windup.gd" id="10_bmamo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gbgva"]
radius = 32.0
height = 100.0

[node name="max" type="CharacterBody2D"]
script = ExtResource("1_enr7n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gbgva")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_nx7hy")

[node name="leg_bottom_left" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-28, 28)
texture = ExtResource("3_68rjg")

[node name="leg_bottom_right" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(28, 28)
texture = ExtResource("3_68rjg")

[node name="leg_top_left" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-28, -28)
texture = ExtResource("3_68rjg")

[node name="leg_top_right" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(28, -28)
texture = ExtResource("3_68rjg")

[node name="max_torso" type="Sprite2D" parent="."]
texture = ExtResource("2_u1ccp")

[node name="max_hammer" type="Sprite2D" parent="."]
position = Vector2(-29, -41)
texture = ExtResource("4_7digu")

[node name="MovementState" type="Node" parent="."]
script = ExtResource("6_qciws")

[node name="Move_Idle" type="Node" parent="MovementState"]
script = ExtResource("7_n808q")

[node name="Move_Cancel" type="Node" parent="MovementState"]
script = ExtResource("8_1ekhc")

[node name="Move_Commit" type="Node" parent="MovementState"]
script = ExtResource("9_ser34")

[node name="Move_Windup" type="Node" parent="MovementState"]
script = ExtResource("10_bmamo")
